# site

./: .gitignore  .gitmodules  Cargo.toml  Makefile  deploy.sh  forwarded.txt
.cargo/: config.toml
public/: config.toml
public/content/: _index.md  about.md  p.md
public/content/posts/: books.md  crates_to_build_on.md  difficult-test.md  linux_av_sync.md  my-first-post.md  project_ideas.md  projects.md  rust_libs.md  secure_nfsv4.md  vim_recipes.md  vim_tricks.md  zfs-mainline-kernel.md
scripts/: deploy.sh  deploy_optimized.sh  setup.sh
scripts/about_page/: Cargo.toml  body.tex
scripts/about_page/src/: format.rs  main.rs  parser.rs
src/: errors.rs  forwarder.rs  main.rs
