[package]
name = "webserver"
version = "0.1.0"
authors = ["dskleingeld <11743287+dskleingeld@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3" }
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
color-eyre = "0.6"
itertools = "0.10"

chrono = "0.4"
derive_more = "0.99"
hotwatch = "0.4"

tokio = { version = "1", features = ["fs"] }
actix-web = { version = "4" }
actix-files = { version = "0.6" }
