[package]
name = "webserver"
version = "0.1.1"
authors = ["David Kleingeld"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
color-eyre = "0.6"
itertools = "0.10"
chrono = "0.4"

tokio = { version = "1", features = ["fs"] }
actix-web = { version = "4" }
actix-files = { version = "0.6" }
